<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wizard: Last stand</string>
    
    <string name="choose_upgrades">Select upgrades</string>
    <string name="num_points">Points: %1$d</string>
    <string name="game_over">Game Over!</string>
    <string name="lvl_completed">Level Completed!</string>
    
    
    <string name="teleport_spell">Teleport</string>
    <string name="teleport_spell_desc">Enables you to teleport your wizard by doubletapping.</string>
    <string name="teleport_spell_cost">400</string>
    
    <string name="push_spell">Force push</string>
    <string name="push_spell_desc">Enables you to push enemies away by swiping the screen.</string>
    <string name="push_spell_cost">100</string>
    
    <string name="skip_upgrade">Skip</string>
        

</resources>