<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <se.wizard.laststand.GameSurfaceView
        android:id="@+id/fullscreen_content2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <se.wizard.laststand.UpgradeView
        android:id="@+id/upgradeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/black_overlay"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/lvl_completed"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_upgrades"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtNumPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_points" />

        <RelativeLayout
            android:id="@+id/btnForcePush"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@+id/textView4"
                android:text="@string/push_spell"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/TextView02"
                android:text="@string/push_spell_desc"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/TextView02"
                android:layout_alignBottom="@+id/TextView02"
                android:layout_alignParentRight="true"
                android:text="@string/push_spell_cost"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnTeleport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@+id/TextView03"
                android:text="@string/teleport_spell"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView04"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/TextView04"
                android:text="@string/teleport_spell_desc"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/TextView04"
                android:layout_alignBottom="@+id/TextView04"
                android:layout_alignParentRight="true"
                android:text="@string/teleport_spell_cost"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="40dp"
            android:layout_weight="0.08"
            android:gravity="center"
            android:text="@string/skip_upgrade"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="15sp" />
    </se.wizard.laststand.UpgradeView>

</FrameLayout>